fixed alignment with project card

--- a/app/app.module.css
+++ b/app/app.module.css
@@ -361,6 +361,9 @@
     .image {
         padding: 2rem 1rem;
     }
+    .projectsContainer {
+        font-size: small;
+    }
 }
 
 /* End Experience */
